ImpressCMS ChangeLog
=== ImpressCMS 1.2.10 Final ===
Release Date: 
DB Version: 40
Build Version: 82

Security release

Security Fix:
927 - SSRF vulnerabilities in image manager
931 - Vulnerability in PHPMailer 5.2.18


=== ImpressCMS 1.2.9 Final ===
Release Date: Jun 2014
Revision:
DB Version: 40
Build Version: 75

Security release
#804: Cross site scripting (XSS) - system image manager CVE-2014-4036 (not on cve.mitre.org?)


=== ImpressCMS 1.2.8 Final ===
Release Date: 30 Jan 2014
Revision:
DB Version: 40
Build Version: 71

Maintenance release ...
Smarty update to 2.6.28
Protector module update to 3.50

Security Fix:
#761 - Deletion of arbitrary files in the system - image editor (Pedro Ribeiro pedrib@gmail.com)
#762 - Cross site scripting (XSS) - misc.php (Pedro Ribeiro pedrib@gmail.com)
#763 - Cross site scripting (XSS) - tplsets (Pedro Ribeiro pedrib@gmail.com)

Improvements:
#749 Update Smarty to 2.6.28 and move email protection out of Smarty


Only released as a patch, not a full release.

=== ImpressCMS 1.2.7 Final===
Release date: 27 December 2011
Revision: 
DB Version: 40
Build Version: 54

Maintenance release...
Details of this release are found in the workspace on Assembla - https://impresscmsdev.assembla.com/spaces/impresscms/milestones/746163-impresscms-1-2-7

Security Fix:
* Several security vulnerabilities reported by High-Tech Bridge SA Security Research Lab - HTB23064: https://www.htbridge.ch/advisory/multiple_vulnerabilities_in_impresscms.html

=== ImpressCMS 1.2.7 RC===
Release date: 21 December 2011
Revision: 11503
DB Version: 40
Build Version: 52

Maintenance release...
Details of this release are found in the workspace on Assembla - https://impresscmsdev.assembla.com/spaces/impresscms/milestones/746163-impresscms-1-2-7

'''Fixed'''
* Password filtering and encryption handled the same on all forms
* Custom HTML Purifier filters are now loading automatically from the plugins folder

'''Improved'''